<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 DarkKat

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- Type buttons -->
    <string name="default_title">Default</string>
    <string name="big_text_title">Text</string>
    <string name="big_picture_title">Picture</string>
    <string name="inbox_title">Inbox</string>
    <string name="messaging_title">Message</string>
    <string name="media_title">Media</string>

    <!-- Priority buttons -->
    <string name="set_priority_title">Set priority</string>
    <string name="priority_min_title">Minimal</string>
    <string name="priority_low_title">Low</string>
    <string name="priority_default_title">Default</string>
    <string name="priority_high_title">High</string>
    <string name="priority_max_title">Maximal</string>

    <!-- Action buttons -->
    <string name="show_action_buttons_title">Show Actions</string>

    <!-- Notification text -->
    <string name="notification_sub_text">Sub text</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_content_text">Content text</string>
    <string name="notification_action_text">Action %1$s</string>
    <string name="notification_action_reply_title">Reply</string>
    <string name="notification_action_reply_hint">Type reply</string>
    <string name="notification_action_replied_title">Reply received</string>
    <string name="notification_action_replied_text">Typed reply: %1$s</string>

    <string name="line_number_text">This is line no. %1$s</string>
    <string name="conversation_title">Conversation title</string>
    <string name="fast_rewind_title">Fast rewind</string>
    <string name="skip_previous_title">Skip previous</string>
    <string name="play_title">Play</string>
    <string name="skip_next_title">Skip next</string>
    <string name="fast_forward_title">Fast forward</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="show_emphasized_actions_title">Emphasize actions</string>
    <string name="show_emphasized_actions_summary">Enable to emphasize action buttons. This indicates a full screen notification like receiving an incomming call. The notification will be shown as heads up.</string>
    <string name="show_tombstone_actions_title">Show actions disabled</string>
    <string name="show_tombstone_actions_summary">Enable to show actions disabled. This indicates an action button without an action.</string>
    <string name="show_reply_action_title">Show reply action</string>
    <string name="show_reply_action_summary">Enable to show a reply action.</string>
    <string name="use_default_notification_color_title">Use default</string>
    <string name="use_default_notification_color_summary">Enable to use the default notification color, disable to choose a color.</string>
    <string name="notification_color_title">Notification color</string>
    <string name="color_title">Color</string>
</resources>
